feat: why it doesn't work